# cmake-build-test

./: CMakeLists.txt  README.md
src/: main.cpp
src/NumericIntegration/: CMakeLists.txt  NumericIntegration.cpp
src/NumericIntegration/include/: NumericIntegration.h
src/NumericIntegration/test/: CMakeLists.txt  NumericIntegration.test.cpp
